using UnityEngine;

public static class MonsterAnimatorHash
{
    public static readonly int speedHash = Animator.StringToHash("Speed");
    public static readonly int isBattleHash = Animator.StringToHash("isBattle");
    public static readonly int nAttackHash = Animator.StringToHash("nAttack");
    public static readonly int skill_1Hash = Animator.StringToHash("Skill_1");
    public static readonly int skill_2Hash = Animator.StringToHash("Skill_2");
    public static readonly int skill_3Hash = Animator.StringToHash("Skill_3");
    public static readonly int takeHitHash = Animator.StringToHash("takeHit");
    public static readonly int isDeadHash = Animator.StringToHash("isDead");
    public static readonly int isRetreatHash = Animator.StringToHash("isRetreat");
}
